
[project]
name = "subnet-app"
version = "0.1.0"
requires-python = ">=3.10, <4.0"
description = "Business logic application"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "trio",
    "msgpack",
    "subnet-engine", # Depends on the engine package
]

[project.optional-dependencies]
dev = [
    "wheel",
    "setuptools>=42",
    "ruff>=0.11.10",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["subnet_app"]

[tool.setuptools.package-data]
subnet_app = ["py.typed"]
